@@ -7,24 +7,18 @@ buildscript {
 }
 
 plugins {
-    id 'java'
-    id 'application'
+    id 'java-library'
     id 'org.ajoberstar.grgit' version '2.1.0'
     id 'com.github.johnrengelman.shadow' version '4.0.4'
     id 'de.jjohannes.extra-java-module-info' version '0.1'
  
 }
 
-application {
-    mainModule = 'gov.gsa.pivconformance.gui' // name defined in module-info.java
-    mainClass = 'org.gsa.pivconformance.gui.GuiRunnerApplication'
-}
-
 java {
     modularity.inferModulePath.set(true)
 }
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'eclipse'
@@ -51,66 +45,27 @@ def getVersion = { ->
 
 dependencies {
     implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
     implementation 'commons-cli:commons-cli:1.4'
     implementation 'commons-codec:commons-codec:1.15'
     implementation 'commons-csv:commons-csv:1.8'
-    implementation 'com.payneteasy:ber-tlv:1.0-8'
     implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
     implementation 'ch.qos.logback:logback-core:1.3.0-alpha5'
     implementation 'com.jgoodies:jgoodies-common:1.4.0'
     implementation 'com.jgoodies:jgoodies-forms:1.6.0'
-    implementation 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'
-    implementation 'gov.gsa.pivconformance.conformancelib:gov.gsa.pivconformance.conformancelib:0.2.1-beta'
-    implementation 'junit:junit:4.13'
+    implementation 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:' + getVersion()
+    implementation 'gov.gsa.pivconformance.conformancelib:gov.gsa.pivconformance.conformancelib:' + getVersion()
     implementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    implementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
     implementation 'org.junit.platform:junit-platform-launcher:1.7.0'
-    implementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    implementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
+    implementation group: 'javax.activation', name: 'activation', version: '1.1'
 
-    runtime 'org.bouncycastle:bcprov-jdk15on:1.66'
-    runtime 'org.bouncycastle:bcpkix-jdk15on:1.66'
-    runtime 'commons-cli:commons-cli:1.4'
-    runtime 'commons-codec:commons-codec:1.15'
-    runtime 'commons-csv:commons-csv:1.8'
-    runtime 'com.payneteasy:ber-tlv:1.0-8'
-    runtime 'org.slf4j:slf4j-api:2.0.0-alpha1'
-    runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
-    runtime 'ch.qos.logback:logback-core:1.3.0-alpha5'
-    runtime 'com.jgoodies:jgoodies-common:1.4.0'
-    runtime 'com.jgoodies:jgoodies-forms:1.6.0'
-    runtime 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'
-    runtime 'gov.gsa.pivconformance.conformancelib:gov.gsa.pivconformance.conformancelib:0.2.1-beta'
-    runtime 'junit:junit:4.13'
-    runtime 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    runtime 'org.junit.jupiter:junit-jupiter-params:5.7.0'
-    runtime 'org.junit.platform:junit-platform-launcher:1.7.0'
-    runtime 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    runtime 'org.junit.jupiter:junit-jupiter-params:5.7.0'   
-    
     shadow 'org.bouncycastle:bcprov-jdk15on:1.66'
     shadow 'org.bouncycastle:bcprov-jdk15on:1.66'
-    shadow 'commons-cli:commons-cli:1.4'
-    shadow 'commons-codec:commons-codec:1.15'
-    shadow 'commons-csv:commons-csv:1.8'
-    shadow 'com.payneteasy:ber-tlv:1.0-8'
-    shadow 'org.slf4j:slf4j-api:2.0.0-alpha1'
-    shadow 'ch.qos.logback:logback-classic:1.3.0-alpha5'
-    shadow 'ch.qos.logback:logback-core:1.3.0-alpha5'
-    shadow 'com.jgoodies:jgoodies-common:1.4.0'
-    shadow 'com.jgoodies:jgoodies-forms:1.6.0'
-    shadow 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'
-    shadow 'gov.gsa.pivconformance.conformancelib:gov.gsa.pivconformance.conformancelib:0.2.1-beta'
-    shadow 'junit:junit:4.13'
-    shadow 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    shadow 'org.junit.jupiter:junit-jupiter-params:5.7.0'
-    shadow 'org.junit.platform:junit-platform-launcher:1.7.0'
-    shadow 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    shadow 'org.junit.jupiter:junit-jupiter-params:5.7.0'
+    shadow 'org.bouncycastle:bcprov-ext-jdk15on:1.66'
 }
-//--add-exports org.junit.platform.commons/org.junit.platform.commons.util=gov.gsa.pivconformance.conformancelib
+
 extraJavaModuleInfo {
 
     module("bcprov-jdk15on-1.66.jar", "org.bouncycastle", "1.66") {
@@ -119,29 +74,14 @@ extraJavaModuleInfo {
     module("bcpkix-jdk15on-1.66.jar", "org.bouncycastle", "1.66") {
         exports("bcpkix.jdk15on")
     }
-    module("ber-tlv-1.0-8.jar", "com.payneteasy", "1.08") {
-        exports("ber.tlv")
-    }
     module("hamcrest-core-1.3.jar", "org.hamcrest", "1.3") {
         exports("hamcrest.core")
     }
     module("slf4j-api-2.0.0-alpha1.jar", "org.slf4j", "1.4") {
         exports("slf4j.api")
-        exports("org.slf4j")
     }
     module("sqlite-jdbc-3.32.3.2.jar", "org.xerial.sqlite", "3.32.3.2") {
         exports("org.sqlite")
-    }
-    module("junit-4.11.jar", "org.junit.jupiter", "4.11") {
-        exports("org.junit")
-        exports("org.junit.runner")
-        exports("org.junit.internal")
-    }
-    module("junit-platform-launcher-5.7.0.jar", "org.junit.platform", "5.7.0") {
-        exports("org.junit.platform.launcher")
-    }
-    module("junit-platform-commons-5.7.0.jar", "org.junit.platform.commons", "5.7.0") {
-        exports("org.junit.platform.commons")
     }
     module("activation-1.1.jar", "javax.activation", "1.1") {
         exports("activation")
@@ -151,33 +91,21 @@ extraJavaModuleInfo {
     }
     module("commons-cli-1.4.jar", "org.apache.commons.cli", "1.4") {
         exports("org.apache.commons.cli")
-    }    
+    }
     module("commons-csv-1.8.jar", "org.apache.commons.csv", "1.8") {
         exports("org.apache.commons.csv")
-        exports("commons.csv")
     }
-    module("commons-codec-1.13.jar", "org.apache.commons.codec", "1.15") {
-        exports("commons.codec");      
+     module("commons-codec-1.15.jar", "org.apache.commons.codec", "1.15") {
         exports("org.apache.commons.codec")
         exports("org.apache.commons.codec.binary")
     }   
     module("logback-classic-1.3.0-alpha5.jar", "ch.qos.logback", "1.3.0-alpha5") {
         exports("logback.classic")
-        exports("ch.gos.logback.classic")
     }
     module("logback-core-1.3.0-alpha5.jar", "ch.qos.logback", "1.3.0-alpha5") {
         exports("logback.core")
-        exports("ch.qos.logback.core")
         exports("logback.core.rolling")
     }
-    module("jgoodies-common-1.4.0", "com.jgoodies", "1.4.0") {
-        exports("common")
-    }
-    module("jgoodies-forms-1.6.0", "com.jgoodies", "1.6.0") {
-        exports("forms")
-    }
-    automaticModule("slf4j-api-2.0.0-alpha1.jar", "org.slf4j")
-    automaticModule("logback-core-1.3.0-alpha5", "ch.qos.logback.core")
     automaticModule("ibatis-core-3.0.jar", "org.apache.ibatis")
     automaticModule("jgoodies-forms-1.6.0.jar", "com.jgoodies.forms")
     automaticModule("jgoodies-common-1.4.0.jar", "com.jgoodies.common")
@@ -186,7 +114,7 @@ extraJavaModuleInfo {
 sourceSets {
     main {
         java {
-            if(!targetCompatibility.equals(JavaVersion.VERSION_11))
+            if(targetCompatibility != JavaVersion.VERSION_11)
                 exclude '**/module-info.java'
         }
     }
@@ -201,16 +129,17 @@ eclipse {
                 def jre = entries.find { it.path.contains 'org.eclipse.jdt.launching.JRE_CONTAINER' }
                 jre.accessRules.add(new AccessRule('0', 'javax/smartcardio/**'))
 
-                //def cardlib = entries.find { it.path.contains 'gov.gsa.pivconformance.cardlib' }
-                //cardlib.sourcePath = fileReference(file('../../cardlib/build/libs/' + 'gov.gsa.pivconformance.cardlib-sources' + '-' + getVersion() + '.jar'))
-                //def conformancelib = entries.find { it.path.contains 'gov.gsa.pivconformance.conformancelib' }
-                //conformancelib.sourcePath = fileReference(file('../../conformancelib/build/libs/gov.gsa.pivconformance.conformancelib-sources' + '-' + getVersion() + '.jar'))
+                //def cardlib = entries.find { it.path.contains 'cardlib' }
+                //cardlib.sourcePath = fileReference(file('../../libs/' + 'gov.gsa.pivconformance.cardlib' + '-' + getVersion() + '.jar'))
+                //def conformancelib = entries.find { it.path.contains 'fips' }
+                //conformancelib.sourcePath = fileReference(file('../../libs/gov.gsa.pivconformance.cardlib' + '-' + getVersion() + '.jar'))
             }
         }
     }
 }
 
 shadowJar {
+    classifier = ''
 }
 
 // Define the main class for the application jar that will be produced
@@ -218,12 +147,12 @@ mainClassName = 'gov.gsa.pivconformance.gui.GuiRunnerApplication'
 
 jar {
     version = getVersion()
-    dependsOn(shadowJar { })
+    dependsOn(shadowJar { classifier = null })
     manifest {
         attributes 'Main-Class': mainClassName
     }
     doLast {
-        println 'archiveName: ' + getArchiveFileName()
+        println 'archiveName: ' + archiveName
         configurations.runtime.each { println it }
     }
 }
@@ -253,7 +182,7 @@ task sourceJar(type: Jar, dependsOn: classes) {
 
 task copyShadowLibs(type: Copy) {
     from configurations.shadow
-    into 'build/libs'
+    into '../../libs'
 }
 
 shadowJar.dependsOn copyShadowLibs
@@ -268,12 +197,12 @@ task installSource(type: Copy) {
     dependsOn copyShadowLibs
     dependsOn sourceJar
     from sourceJar
-    into 'build/libs' 
+    into '../../libs' 
 }
 
 task install(type: Copy) {
     version = getVersion()
     dependsOn jar
     from shadowJar
-    into 'build/libs' 
+    into '../../libs' 
 }
